test/e2e/pass/generics/monomorphized_struct_and_fn.cst
struct Box<T> {
    value: T,
}

fn wrap<T>(value: T) -> Box<T> {
    Box<T> { value: value }
}

fn main() -> num {
    let boxed: Box<num> = wrap(0);
    boxed.value
}
