test/e2e/fail_compile/generics/where_not_const.cst
fn id<T>(value: T) -> T where value == value {
    value
}

fn main() -> num {
    id(0)
}
